--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(Alaska2
         main.cpp
         Stack.cpp
+        Card.cpp
         Card.h
         Stack.h
 )
